RESOLVED FIXED180758
Fix crash under Document::visualUpdatesSuppressionTimerFired()
https://bugs.webkit.org/show_bug.cgi?id=180758
Summary Fix crash under Document::visualUpdatesSuppressionTimerFired()
Simon Fraser (smfr)
Reported 2017-12-13 10:48:23 PST
Fix crash under Document::visualUpdatesSuppressionTimerFired()
Attachments
Patch (2.41 KB, patch)
2017-12-13 10:49 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-12-13 10:49:09 PST
Simon Fraser (smfr)
Comment 2 2017-12-13 10:49:25 PST
WebKit Commit Bot
Comment 3 2017-12-13 11:26:11 PST
Comment on attachment 329234 [details] Patch Clearing flags on attachment: 329234 Committed r225859: <https://trac.webkit.org/changeset/225859>
WebKit Commit Bot
Comment 4 2017-12-13 11:26:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.