Fix crash under Document::visualUpdatesSuppressionTimerFired() https://bugs.webkit.org/show_bug.cgi?id=180758 Document::visualUpdatesSuppressionTimerFired

Reviewed by Zalan Bujtas.

Speculative fix for crash under visualUpdatesSuppressionTimerFired() where view()
can be null. Add null checks for the view() in all code called from this function.

* dom/Document.cpp:
(WebCore::Document::setVisualUpdatesAllowed):
(WebCore::Document::visualUpdatesSuppressionTimerFired):


Canonical link: https://commits.webkit.org/196670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225859 268f45cc-cd09-0410-ab3c-d52691b4dbfc